feat: 修改readme,并且优化了操作步骤和说明,demo修改redis镜像为redis:6.0

--- a/charts/redis-cluster-operator/values.yaml
+++ b/charts/redis-cluster-operator/values.yaml
@@ -6,7 +6,7 @@ operator:
   namespace: ""  # keep this value "" if you want to deploy cluster-wide operator
   image_source: "fishu/redis-cluster-operator"
   image_tag: "latest"
-  imagePullPolicy: "Always"
+  imagePullPolicy: "IfNotPresent"
   resources:
     limits:
       cpu: 200m
