--- a/deploy/example/redis.kun_v1alpha1_distributedrediscluster_cr.yaml
+++ b/deploy/example/redis.kun_v1alpha1_distributedrediscluster_cr.yaml
@@ -9,4 +9,5 @@ spec:
   # Add fields here
   masterSize: 3
   clusterReplicas: 1
-  image: redis:5.0.4-alpine
+  # image: redis:5.0.4-alpine
+  image: redis:6.0
