--- a/deploy/crds/redis.kun_distributedredisclusters_crd.yaml
+++ b/deploy/crds/redis.kun_distributedredisclusters_crd.yaml
@@ -70,6 +70,9 @@ spec:
             serviceName:
               type: string
               pattern: '[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*'
+            image:
+              type: string
+              pattern: '(.)*'
           type: object
         status:
           description: DistributedRedisClusterStatus defines the observed state
