#feat: 修改为redis-operator

--- a/charts/redis-cluster-operator/templates/role.yaml
+++ b/charts/redis-cluster-operator/templates/role.yaml
@@ -5,7 +5,7 @@ kind: ClusterRole
 kind: Role
 {{- end }}
 metadata:
-  name: redis-cluster-operator
+  name: redis-operator
 rules:
   - apiGroups:
       - ""
