--- a/charts/redis-cluster-operator/Chart.yaml
+++ b/charts/redis-cluster-operator/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: redis-cluster-operator
-description: A Helm chart for Redis cluster operator deployment
+name: redis-operator
+description: A Helm chart for Redis operator deployment
 
 type: application
 
