--- a/charts/redis-cluster-operator/templates/role_binding.yaml
+++ b/charts/redis-cluster-operator/templates/role_binding.yaml
@@ -5,12 +5,12 @@ kind: RoleBinding
 {{- end }}
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: redis-cluster-operator
+  name: redis-operator
 subjects:
 - kind: ServiceAccount
-  name: redis-cluster-operator
+  name: redis-operator
   namespace: {{.Release.Namespace}}
 roleRef:
   kind: ClusterRole
-  name: redis-cluster-operator
+  name: redis-operator
   apiGroup: rbac.authorization.k8s.io
