--- a/charts/redis-cluster-operator/templates/service_account.yaml
+++ b/charts/redis-cluster-operator/templates/service_account.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: redis-cluster-operator
+  name: redis-operator
   namespace: {{.Release.Namespace}}
