--- a/deploy/namespace/role_binding.yaml
+++ b/deploy/namespace/role_binding.yaml
@@ -1,11 +1,11 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: redis-cluster-operator
+  name: redis-operator
 subjects:
 - kind: ServiceAccount
-  name: redis-cluster-operator
+  name: redis-operator
 roleRef:
   kind: Role
-  name: redis-cluster-operator
+  name: redis-operator
   apiGroup: rbac.authorization.k8s.io
